--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,20 +4,10 @@
 	padding: 15px 30px 5px 10px;
 }
 
-#classclock{
-	width: 300px;
-	float: left;
-}
-
-#ifsp{
-	float: right;
-}
-
 #sidebar{
 	background-color: #F2F9E8;
 	padding: 10px;
 	height: 100%;
-	/*z-index: 9999;*/
 	float: left;
 }
 
@@ -77,7 +67,6 @@
 	height: 100px;
 }
 
-
 /*tamanhos em porcentagem para qualquer bloco*/
 .disc{
     width: 300px;
@@ -88,42 +77,17 @@
     float: right;
 }
 
-/*tamanhos em porcentagem para qualquer bloco*/
-.percent-70{
-	width: 70%;
-}
-
-.percent-50{
-	width: 50%;
-}
-
-.percent-40{
-	width: 40%;
-}
-
-.percent-30{
-	width: 30%;
-}
-
-.percent-20{
-	width: 20%;
-}
-
-.percent-15{
-	width: 15%;
-}
-
-.percent-10{
-	width: 10%;
-}
-
-.percent-5{
-	width: 5%;
-}
-
 /*faz com que os blocos se alinhem*/
 .inline{
 	display: inline-block;
+}
+
+.block{
+	display: block;
+}
+
+.padding-15-lr{
+	padding:0 15px;
 }
 
 /*Alteração da cor da fonte do cabeçalho usado no multi-select*/
