Correcao do layout em configuracoes e do modal em visualizar professores

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@
 	margin-top: 10%;
 }
 
+ ul#disciplinaTable-view{
+	margin: 0 0 0 -20px;
+}
+
 /* Redefine o tamanho do logo */
 .logo{
 	height: 100px;
