--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,3 +106,12 @@
 .margin-top-error{
 	margin: -15px 0 0 0;
 }
+
+/*Alteração da tabela Grade*/
+.dsemana {
+     text-align: center; 
+     color: #68B92E;  
+     background-color: #F2F9E8;
+    
+}
+
