--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,9 +109,38 @@
 
 /*Alteração da tabela Grade*/
 .dsemana {
+	
      text-align: center; 
      color: #68B92E;  
      background-color: #F2F9E8;
     
+}
+.thsemana {
+	 width: 15%;
+     text-align: center; 
+     color: #68B92E;  
+     background-color: #F2F9E8;
+    
+}
+
+.thaula{
+	width: 5%;
+	 text-align: center; 
+     color: #68B92E;  
+     background-color: #F2F9E8;
+}
+
+.thdisciplina{
+	width:55%;
+	 text-align: center; 
+     color: #68B92E;  
+     background-color: #F2F9E8;
+}
+
+.thprofessor{
+	width:25%;
+	 text-align: center; 
+     color: #68B92E;  
+     background-color: #F2F9E8;
 }
 
