--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,10 +116,10 @@
     
 }
 .thsemana {
-	 width: 15%;
-     text-align: center; 
-     color: #68B92E;  
-     background-color: #F2F9E8;
+    width: 15%;
+    text-align: center; 
+    color: #68B92E;  
+    background-color: #F2F9E8;
     
 }
 
@@ -143,4 +143,12 @@
      color: #68B92E;  
      background-color: #F2F9E8;
 }
-
+.tdintervalo{
+	 
+	 text-align: center; 
+     background-color: #F8F8F8;
+}
+.tdintervalo span{
+	
+	 margin-right:15%;
+}
