--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@ html {
 }
 
 footer {
-    display: none;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -16,6 +15,7 @@ footer {
 
 body {
     font-family: 'Roboto Mono', monospace;
+    padding-bottom: 100px;
 }
 
 .container-fluid {
@@ -72,6 +72,10 @@ header a:hover {
     height: 90px;
 }
 
+.navpills{
+    margin: 10px;
+}
+
 .users {
     background-color: #b2daa6;
 }
@@ -107,6 +111,10 @@ header a:hover {
 
 .top-bar {
     margin-top: 20px;
+}
+
+.error {
+	color: #FF0000;
 }
 
 /* Bootstrap Override */
