--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html {
     min-height: 100%;
 }
 
-footer {
+#footer {
     /*position: absolute;*/
     /*left: 0;
     bottom: 0;*/
@@ -106,7 +106,8 @@ header a:hover {
 }
 
 #content {
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
+    min-height: calc(100vh - 240px);
 }
 
 .top-bar {
