--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,26 @@
 html {
-    position: relative;
+    /*position: relative;*/
     min-height: 100%;
 }
 
-footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: auto;
-    width: 100%;
+#footer {
+    /*position: absolute;*/
+    /*left: 0;
+    bottom: 0;*/
+    /*height: auto;*/
+    /*width: 100%;*/
     background-color: #EAEAEA;
     padding-top: 10px;
 }
 
 body {
     font-family: 'Roboto Mono', monospace;
-    padding-bottom: 100px;
+    /*padding-bottom: 100px;*/
 }
 
 .container-fluid {
     min-width: 500px;
-    padding: 0 15px;
+    padding: 0 15px 0 0;
 }
 
 .usuario {
@@ -84,7 +84,7 @@ header a:hover {
     background-color: #EAEAEA;
     padding: 4px 4px;
     border-radius: 0 5px 5px 0;
-    margin: 3px 0;
+    margin: 5px 0 0 0;
 }
 
 .sidebar li {
@@ -106,7 +106,8 @@ header a:hover {
 }
 
 #content {
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
+    min-height: calc(100vh - 240px);
 }
 
 .top-bar {
@@ -138,4 +139,13 @@ header a:hover {
 
 .nav-tabs>li>a {
     padding: 10px 10px;
+}
+
+h2 {
+	padding: 0px!important;
+	margin: 0px!important;
+}
+
+.page-header{
+	padding-bottom: 10px!important;
 }
