removido o footer e feito alterações no arquivo css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,16 @@ html {
     background-color: #EAEAEA;
     padding-top: 10px;
 }
+#footer1 {
+    
+position: sticky;
+    left: 0;
+    bottom: 0;
+    height: auto;
+    width: 100%;
+    background-color: #EAEAEA;
+    padding-top: 10px;      
+}
 
 body {
     font-family: 'Roboto Mono', monospace;
