Alteracao da distancia do footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,15 @@
 html {
-    /*position: relative;*/
     min-height: 100%;
 }
 
 #footer {
-    /*position: absolute;*/
-    /*left: 0;
-    bottom: 0;*/
-    /*height: auto;*/
-    /*width: 100%;*/
+    margin-top: 20px;
     background-color: #EAEAEA;
     padding-top: 10px;
 }
 
 body {
     font-family: 'Roboto Mono', monospace;
-    /*padding-bottom: 100px;*/
 }
 
 .container-fluid {
@@ -106,7 +100,6 @@ header a:hover {
 }
 
 #content {
-    /*margin-bottom: 10px;*/
     min-height: calc(100vh - 240px);
 }
 
@@ -121,8 +114,6 @@ header a:hover {
 .width-180{
 	max-width: 180px;
 }
-
-
 
 /* Bootstrap Override */
 
