--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,10 +156,14 @@ h2 {
     font-weight: bold;
 }
 
-.bold{
-    font-weight: bold;
-}
-
 .page-header{
 	padding-bottom: 10px!important;
+}
+
+.error{
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.42857143;
+  color: red;
 }
