Alteracao espacamento do menu com o footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ header a:hover {
     background-color: #EAEAEA;
     padding: 4px 4px;
     border-radius: 0 5px 5px 0;
-    margin: 5px 0 0 0;
+    margin: 5px 0 5px 0;
 }
 
 .sidebar li {
